--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -60,7 +60,8 @@ header[role="banner"] {
   width: 100%;
 }
 
-.countryGroups summary {
+// Safari doesn't respect styles applied to <summary> so we need this wrapper div
+.countryGroups__summary-wrapper {
   align-items: center;
   color: gu-colour(garnett-neutral-2);
   display: flex;
@@ -170,14 +171,14 @@ h1 {
   margin: 0 -10px;
   padding: 0 10px $gu-v-spacing;
 }
- 
+
 input,
 select,
 textarea,
 button {
   font: inherit;
 }
-  
+
 .blurb {
   font-size: 14px;
   line-height: 1.4;
@@ -232,7 +233,7 @@ header[role="banner"] {
   .gu-content__bg .svg-contributions-bg-desktop {
     display: none;
   }
-  
+
   .gu-content__bg .svg-contributions-bg-mobile {
     bottom: 0;
     height: 223px;
@@ -280,7 +281,7 @@ header[role="banner"] {
   .countryGroups__item .icon {
     margin-left: -40px;
   }
-    
+
   .gu-content__content {
     border-color: gu-colour(garnett-neutral-4);
     border-style: none solid;
@@ -297,7 +298,7 @@ header[role="banner"] {
     width: 100%;
     z-index: -1;
   }
-  
+
   .gu-content__bg svg {
     bottom: 0;
     height: 580px;
@@ -317,7 +318,7 @@ header[role="banner"] {
     padding: 0 calc(50% - 550px) 0 calc(50% - 390px);
     width: 940px;
   }
-  
+
   footer[role="contentinfo"] {
     padding: 0 calc(50% - 550px) ($gu-v-spacing * 2) calc(50% - 390px);
     width: 940px;
@@ -347,18 +348,18 @@ header[role="banner"] {
     grid-template-rows: [header-t] 75px [header-b] 1fr [footer-t] auto [footer-b];
     grid-template-columns: 1fr;
   }
-  
+
   header[role="banner"] {
     height: auto;
     grid-row: header-t / header-b;
   }
-  
+
   footer[role="contentinfo"] {
     grid-row: footer-t / footer-b;
   }
-  
+
   .gu-content__main {
-    grid-row: header-b / footer-t;  
+    grid-row: header-b / footer-t;
   }
 
   header[role="banner"],
@@ -404,13 +405,13 @@ header[role="banner"] {
       padding: 0 0 ($gu-v-spacing * 2);
       width: auto;
     }
-    
+
     .gu-content__main,
     footer[role="contentinfo"] {
       grid-column-gap: $gu-h-spacing;
-      grid-template-columns: 1fr repeat(8, 70px) 1fr;  
+      grid-template-columns: 1fr repeat(8, 70px) 1fr;
     }
-    
+
     header[role="banner"],
     footer[role="contentinfo"] {
       display: grid;
@@ -450,10 +451,10 @@ header[role="banner"] {
     header[role="banner"],
     footer[role="contentinfo"] {
       grid-column-gap: $gu-h-spacing;
-      grid-template-columns: 1fr repeat(14, 60px) 1fr;  
+      grid-template-columns: 1fr repeat(14, 60px) 1fr;
       width: auto;
     }
-    
+
     header[role="banner"],
     footer[role="contentinfo"] {
       grid-column: span 16;
@@ -476,15 +477,15 @@ header[role="banner"] {
     .gu-content__bg {
       grid-column: 1 / 17;
     }
-  }  
+  }
 
   @include mq($from: wide) {
     .gu-content__main,
     header[role="banner"],
     footer[role="contentinfo"] {
       grid-column-gap: $gu-h-spacing;
-      grid-template-columns: 1fr repeat(16, 60px) 1fr;  
-    }  
+      grid-template-columns: 1fr repeat(16, 60px) 1fr;
+    }
 
     .glogo {
       grid-column: 16;
@@ -565,7 +566,7 @@ form {
 .form__radio-group--tabs .form__radio-group-list {
   display: flex;
 }
-    
+
 .form__radio-group--tabs .form__radio-group-item {
   border-top: 1px solid gu-colour(neutral-4);
   flex: 1;
@@ -585,7 +586,7 @@ form {
   background: gu-colour(garnett-neutral-5);
   color: gu-colour(sport-garnett-media-main-1);
 }
-        
+
 .form__radio-group--tabs .form__radio-group-input:not(:checked) + .form__radio-group-label {
   background: gu-colour(garnett-neutral-3);
   color: gu-colour(garnett-neutral-2);
@@ -614,7 +615,7 @@ form {
   width: 50px;
   height: 50px;
 }
-  
+
 .form__radio-group--pills .form__radio-group-input:checked + .form__radio-group-label {
   background: gu-colour(sport-garnett-media-main-1);
   color: gu-colour(garnett-neutral-5);
@@ -756,12 +757,12 @@ form {
 
 .form__radio-group--contribution-amount,
 .form__field--contribution-other-amount,
-.form__field--contribution-fname, 
+.form__field--contribution-fname,
 .form__field--contribution-lname {
   margin-top: 12px;
 }
 
-.form__field--contribution-email, 
+.form__field--contribution-email,
 .form__field--contribution-state {
   margin-top: 24px;
 }
@@ -775,7 +776,7 @@ form {
 }
 
 .form__input-with-icon .form__icon {
-  align-items: center; 
+  align-items: center;
   display: flex;
   fill: gu-colour(garnett-neutral-2);
   height: 40px;
