--- a/assets/components/leftMarginSection/leftMarginSection.scss
+++ b/assets/components/leftMarginSection/leftMarginSection.scss
@@ -21,12 +21,9 @@
 
 .component-left-margin-section__content {
   flex-grow: 1;
+  flex-basis: gu-span(11);
 
-  @include mq($from: tablet) {
-    flex-basis: 730px;
-  }
-
-  @include mq($from: desktop) {
-    flex-basis: 960px;
+  @include mq($from: leftCol) {
+    flex-basis: gu-span(13);
   }
 }
