--- a/assets/components/leftMarginSection/leftMarginSection.scss
+++ b/assets/components/leftMarginSection/leftMarginSection.scss
@@ -23,6 +23,10 @@
   flex-grow: 1;
   flex-basis: gu-span(11);
 
+  @include mq($from: desktop) {
+    flex-basis: gu-span(12);
+  }
+
   @include mq($from: leftCol) {
     flex-basis: gu-span(13);
   }
