a bit of padding in the feature block

--- a/assets/components/productPage/productPageFeatures/productPageFeatures.scss
+++ b/assets/components/productPage/productPageFeatures/productPageFeatures.scss
@@ -11,6 +11,7 @@
 
 .component-product-page-features__copy {
   @include gu-font-body-responsive;
+  margin-top: $gu-v-spacing / 4;
 }
 
 .component-product-page-features__item {
