--- a/assets/stylesheets/gu-sass/typography.scss
+++ b/assets/stylesheets/gu-sass/typography.scss
@@ -77,7 +77,7 @@ $gu-fonts: (
 
 
 // ----- Headlines ----- //
-@mixin gu-font-header-responsive($size-only: false) {
+@mixin gu-font-header($size-only: false) {
 	@if $size-only == false {
 		@include gu-font-headline;
 	}
@@ -87,7 +87,7 @@ $gu-fonts: (
     font-size: 42px;
   }
 }
-@mixin gu-font-header-tag-responsive($size-only: false) {
+@mixin gu-font-header-tag($size-only: false) {
 	@if $size-only == false {
 		@include gu-font-headline;
 	}
@@ -97,7 +97,7 @@ $gu-fonts: (
     font-size: 22px;
   }
 }
-@mixin gu-font-headline-responsive($size-only: false) {
+@mixin gu-font-headline($size-only: false) {
 	@if $size-only == false {
 		@include gu-font-headline;
 	}
@@ -106,7 +106,7 @@ $gu-fonts: (
     font-size: 24px;
   }
 }
-@mixin gu-font-standfirst-responsive($size-only: false) {
+@mixin gu-font-standfirst($size-only: false) {
 	@if $size-only == false {
 		@include gu-font-headline;
 	}
@@ -118,7 +118,7 @@ $gu-fonts: (
 
 
 // ----- Body ----- //
-@mixin gu-font-body-responsive($size-only: false) {
+@mixin gu-font-body($size-only: false) {
 	@if $size-only == false {
 		@include gu-font-egyptian;
 	}
@@ -127,14 +127,14 @@ $gu-fonts: (
 
 
 // ----- Sans ----- //
-@mixin gu-font-sans-responsive($size-only: false) {
+@mixin gu-font-sans($size-only: false) {
 	@if $size-only == false {
 		@include gu-font-sans;
 	}
   font-size: 16px;
 }
 
-@mixin gu-font-sans-title-responsive($size-only: false) {
+@mixin gu-font-sans-title($size-only: false) {
 	@if $size-only == false {
 		@include gu-font-sans;
 	}
