--- a/assets/components/headingBlock/headingBlock.scss
+++ b/assets/components/headingBlock/headingBlock.scss
@@ -1,7 +1,7 @@
 
 
 .component-heading-block__overheading {
-  @include gu-font-header-tag-responsive();
+  @include gu-font-header-tag();
   background-color: gu-colour(news-garnett-highlight);
   color: gu-colour(garnett-neutral-1);
   padding: ($gu-v-spacing/2) ($gu-h-spacing / 2);
@@ -25,13 +25,13 @@
 
 .component-heading-block__heading {
   @extend %component-heading-block__card;
-  @include gu-font-header-responsive();
+  @include gu-font-header();
   font-weight: bold;
   padding: ($gu-v-spacing /4) ($gu-h-spacing / 2) ($gu-v-spacing * 1.5);
 }
 
 .component-heading-block__banner {
-  @include gu-font-body-responsive;
+  @include gu-font-body;
   border-top: 1px solid gu-colour(garnett-neutral-5);
   padding: ($gu-v-spacing / 1.5) ($gu-h-spacing / 2) $gu-v-spacing;
 }
