--- a/assets/components/headingBlock/headingBlock.scss
+++ b/assets/components/headingBlock/headingBlock.scss
@@ -1,11 +1,16 @@
 
 
 .component-heading-block__overheading {
-  @include gu-font-header-tag();
+  @include gu-font-headline;
+	font-size: 16px;
+  line-height: 1;
+  font-weight: bold;
   background-color: gu-colour(news-garnett-highlight);
   color: gu-colour(garnett-neutral-1);
   padding: ($gu-v-spacing/2) ($gu-h-spacing / 2);
-  font-weight: bold;
+  @include mq($from: desktop) {
+    font-size: 22px;
+  }
   @supports(transform:translateY(-100%)){
     transform:translateY(-100%);
     position: absolute;
