--- a/assets/components/headingBlock/headingBlock.scss
+++ b/assets/components/headingBlock/headingBlock.scss
@@ -1,7 +1,5 @@
-
-
 .component-heading-block__overheading {
-  @include gu-font-headline;
+  @include gu-family-headline;
 	font-size: 16px;
   line-height: 1;
   font-weight: bold;
@@ -30,13 +28,13 @@
 
 .component-heading-block__heading {
   @extend %component-heading-block__card;
-  @include gu-font-header();
+  @include gu-fontset-header();
   font-weight: bold;
   padding: ($gu-v-spacing /4) ($gu-h-spacing / 2) ($gu-v-spacing * 1.5);
 }
 
 .component-heading-block__banner {
-  @include gu-font-body;
+  @include gu-fontset-body;
   border-top: 1px solid gu-colour(garnett-neutral-5);
   padding: ($gu-v-spacing / 1.5) ($gu-h-spacing / 2) $gu-v-spacing;
 }
