--- a/assets/components/productPage/productPageButton/productPageButton.scss
+++ b/assets/components/productPage/productPageButton/productPageButton.scss
@@ -1,5 +1,5 @@
 .component-product-page-button {
-  @include gu-font-sans;
+  @include gu-fontset-sans;
   display: inline-flex;
   align-items: center;
   text-decoration: none;
