--- a/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
+++ b/assets/pages/weekly-subscription-landing/weeklySubscriptionLanding.scss
@@ -18,6 +18,7 @@
 @import '~components/productPage/productPageFeatures/productPageFeatures';
 @import '~components/productPage/productPagePeriodForm/productPagePeriodForm';
 @import '~components/productPage/productPagePeriodForm/productPagePeriodFormLabel';
+@import '~components/productPage/productPageInfoChip/productPageInfoChip';
 
 :root {
   scroll-behavior: smooth;
