--- a/assets/components/leftMarginSection/leftMarginSection.scss
+++ b/assets/components/leftMarginSection/leftMarginSection.scss
@@ -21,9 +21,9 @@
 
 .component-left-margin-section__content {
   flex-grow: 1;
-  flex-basis: gu-span(11);
+  flex-basis: gu-span(11) + $gu-h-spacing;
 
-  @include mq($from: desktop) {
-    flex-basis: gu-span(12);
+  @include mq($from: leftCol) {
+    flex-basis: gu-span(12) + $gu-h-spacing;
   }
 }
