--- a/assets/components/productPage/productPageFeatures/productPageFeatures.scss
+++ b/assets/components/productPage/productPageFeatures/productPageFeatures.scss
@@ -1,5 +1,8 @@
 .component-product-page-features {
-  @include mq($from: tablet) {
+  @include mq($until: leftCol) {
+    max-width: gu-span(6);
+  }
+  @include mq($from: leftCol) {
     display: flex;
   }
 }
@@ -17,10 +20,10 @@
 .component-product-page-features__item {
   flex: 0 0 25%;
   box-sizing: border-box;
-  padding: ($gu-v-spacing / 6) ($gu-h-spacing/2) ($gu-v-spacing * 2) 0;
-  margin-left: $gu-h-spacing / 2;
+  padding: ($gu-v-spacing / 6) 0 ($gu-v-spacing * 2) ($gu-h-spacing/2);
+  padding-left: $gu-h-spacing / 2;
   border-top: 1px solid gu-colour(garnett-neutral-4);
-  @include mq($from: tablet) {
+  @include mq($from: leftCol) {
     padding: 0 ($gu-h-spacing * 2) ($gu-v-spacing*2) ($gu-h-spacing / 2);
     margin: 0 0 0 -1px;
     border-top: 0;
