--- a/assets/components/productPage/productPagePeriodForm/productPagePeriodForm.scss
+++ b/assets/components/productPage/productPagePeriodForm/productPagePeriodForm.scss
@@ -1,6 +1,9 @@
 .component-product-page-period-form__items {
   margin-bottom: $gu-v-spacing * 2;
-  @include mq($from: tablet) {
+  @include mq($until: leftCol) {
+    max-width: gu-span(6);
+  }
+  @include mq($from: leftCol) {
     display: flex;
     align-items: stretch;
   }
@@ -11,7 +14,7 @@
   padding: 0 $gu-h-spacing/2;
   box-sizing: border-box;
   margin-bottom: $gu-v-spacing;
-  @include mq($from: tablet) {
+  @include mq($from: leftCol) {
     margin-bottom: 0;
   }
 }
