--- a/assets/components/headingBlock/headingBlock.scss
+++ b/assets/components/headingBlock/headingBlock.scss
@@ -28,8 +28,7 @@
 
 .component-heading-block__heading {
   @extend %component-heading-block__card;
-  @include gu-fontset-header();
-  font-weight: bold;
+  @include gu-fontset-heading-large;
   padding: ($gu-v-spacing /4) ($gu-h-spacing / 2) ($gu-v-spacing * 1.5);
 }
 
