--- a/assets/stylesheets/gu-sass/typography.scss
+++ b/assets/stylesheets/gu-sass/typography.scss
@@ -81,10 +81,10 @@ $gu-fonts: (
 @mixin gu-fontset-heading-large($size-only: false) {
 	@include gu-typeface(headline, 32, $size-only);
   @include mq($from: tablet) {
-		@include gu-typeface(headline, 42, true);
+		@include gu-typeface(headline, 42, $size-only: true);
   }
   @include mq($from: leftCol) {
-		@include gu-typeface(headline, 50, true);
+		@include gu-typeface(headline, 50, $size-only: true);
 	}
 	@if $size-only == false {
 		font-weight: 700;
@@ -93,7 +93,7 @@ $gu-fonts: (
 @mixin gu-fontset-heading($size-only: false) {
 	@include gu-typeface(headline, 22, $size-only);
   @include mq($from: tablet) {
-		@include gu-typeface(headline, 24, true);
+		@include gu-typeface(headline, 24, $size-only: true);
 	}
 	@if $size-only == false {
 		font-weight: 700;
@@ -116,7 +116,7 @@ $gu-fonts: (
 @mixin gu-fontset-body-large($size-only: false) {
 	@include gu-typeface(headline, 20, $size-only);
   @include mq($from: tablet) {
-		@include gu-typeface(headline, 22, true);
+		@include gu-typeface(headline, 22, $size-only: true);
 	}
 	@if $size-only == false {
 		font-weight: 400;
